<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_marginTop="3dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary2">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorBackground"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp"
        card_view:cardMaxElevation="4dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center|top">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/rentBookTitleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:textSize="25sp" />

        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|top">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/rentBookAuthorId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="20dp"
            android:text="@string/text_autor" />
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary2" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/rentBookIsbnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_gravity="center|top"
            android:textSize="15sp"
            android:text="@string/text_isbn" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorBackground"
        android:gravity="left"
        android:paddingLeft="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/descriptionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            android:textColor="@color/colorText"
            android:scrollbars = "vertical"
            android:textSize="15sp" />

    </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:textColor="@color/colorText"
            android:background="@color/colorPrimary2"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        style="@style/date_picker_theme" />
    <Button
        android:id="@+id/submitButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:text="Potwierdź"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>